# COE397LSpring2025

./: README.md
Jordan/: CMakeLists.txt  jordan.c
homework1/: CMakeLists.txt  commrank.c
homework10/: CMakeLists.txt  threadplot.cu
homework11/: CMakeLists.txt  sharedmem.cu
homework13/: CMakeLists.txt  matvec.c
homework2/: CMakeLists.txt  randommax.c
homework3/: CMakeLists.txt  scangather.c
homework4/: CMakeLists.txt  isendirecvarray.c
homework5/: CMakeLists.txt  stridescatter.c
homework6/: CMakeLists.txt  jobscript.txt  transpose.c
homework7/: CMakeLists.txt  vectorsum.c
homework8/: CMakeLists.txt  reductcoord.c
homework9/: CMakeLists.txt  sudokusolver.c
project/: CMakeLists.txt  community_detection.c
